<resources>
    <string name="app_name">EmergentSaver</string>
    <string name="action_settings">Settings</string>
    <string name="option_name_text"> Ambulance</string>
    <string name="option_description_text"> Press SEND to contact relay centre for ambulance by SMS</string>
    <string name="send_button_text">SEND</string>
    <string name="more_to_relay_centre_text">Add more content that you want to send to relay centre
    </string>
    <string name="save_btn">SAVE</string>
    <string name="contact_textview">Emergency Contact</string>
    <string name="my_indormation_textview">Edit My Information</string>
    <string name="first_name_textview">First Name</string>
    <string name="last_name_textview">Last Name</string>
    <string name="contact_relationship_textview">Relationship</string>
    <string name="contact_phone_number_textview">Phone Number</string>
    <string name="information_birthday_textview">Birth Date</string>
    <string name="information_gender_textview">Gender       </string>
    <string name="medical_history_textview">Medical History (Epilepsy, Heart Acctack...)</string>
    <string name="drug_allergy_textview">Drug Allergy (Antibiotic...)</string>
    <string name="gender_prompt_textview">Gender</string>
    <string name="edittext_text"></string>
    <string name="medical_history_prompt">Medical Historyt</string>
    <string name="drug_allergy_prompt">Drug Allergy</string>
    <string name="edit_button">EDIT</string>
    <string name="add_option">Add Your Customised Emergency Type</string>
    <string name="add_option_name">Emergency Option Name</string>
    <string name="add_option_description"> Add Emergency Option Description</string>
    <string name="choose_option_Type">Choose Emergency Type</string>
    <string name="add_option_btn">ADD</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="option_type_array">
        <item>Ambulance</item>
        <item>Police</item>
        <item>Fire</item>
    </string-array>


</resources>
