<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_textview"
        android:textColor="@color/black"
        android:textSize="@dimen/prompt_text"
        android:layout_marginLeft="@dimen/padding_item" />

    <EditText
        android:id="@+id/contact_add_firstname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_textview"
        android:textColor="@color/black"
        android:textSize="@dimen/prompt_text"
        android:layout_marginLeft="@dimen/padding_item" />

    <EditText
        android:id="@+id/contact_add_last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone_number_textview"
        android:textColor="@color/black"
        android:textSize="@dimen/prompt_text"
        android:layout_marginLeft="@dimen/padding_item"
        />

    <EditText
        android:id="@+id/contatc_add_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_relationship_textview"
        android:textColor="@color/black"
        android:textSize="@dimen/prompt_text"
        android:layout_marginLeft="@dimen/padding_item" />

    <EditText
        android:id="@+id/contact_add_relationship_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:inputType="textNoSuggestions"/>
    <Button
        android:id="@+id/add_contact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/save_btn_color"
        android:text="@string/save_btn"
        android:paddingTop="@dimen/padding_item"
        android:textStyle="bold"/>





</LinearLayout>