<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item"
            android:layout_marginTop="@dimen/padding_item"/>

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:inputType="textPersonName"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone_number_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:inputType="phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_birthday_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item" />

        <EditText
            android:id="@+id/edit_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:inputType="date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_history_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item"
            />

        <EditText
            android:id="@+id/edit_medical_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_allergy_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/prompt_text"
            android:layout_marginLeft="@dimen/padding_item" />

        <EditText
            android:id="@+id/edit_drug_allergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/gender_prompt_textview"
           android:textSize="@dimen/prompt_text"
           android:textColor="@color/black"
           android:layout_marginTop="@dimen/padding_item"
           android:layout_marginLeft="@dimen/padding_item"
           android:layout_marginRight="@dimen/padding_item"/>

       <Spinner
           android:id="@+id/gender_spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:entries="@array/gender_array"
           android:layout_marginTop="@dimen/padding_item"
           android:layout_marginLeft="@dimen/gender_spinner_margin_left"
           android:layout_marginRight="@dimen/gender_spinner_margin_left"
           android:background="@color/gender_spinner_background"/>
       </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/save_btn_color"
            android:text="@string/save_btn"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/padding_item"/>


    </LinearLayout>

</ScrollView>